# Logisim

./: CMakeLists.txt  Logisim.sln  README.md
Logisim/: Logisim.vcxproj  Logisim.vcxproj.filters  Main.cpp
Logisim/Gates/include/: AndGate.hpp  IGate.hpp  ILogicGate.hpp  InputGate.hpp  NandGate.hpp  NorGate.hpp  OrGate.hpp  OutputGate.hpp  XnorGate.hpp  XorGate.hpp
Logisim/Widgets/include/: Button.hpp  Widget.hpp
Logisim/Widgets/src/: Button.cpp
Logisim/include/: CircuitManager.hpp  Logisim.hpp
Logisim/src/: CircuitManager.cpp  Logisim.cpp
